Added ASIN code support, UI tweaks
